--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@ transition: 0.7s;
   </div>
   <div class="font-extrabold text-3xl mt-5 text-blue-950 font-serif">ABDUL KADIR</div>
   <div class="font-bold text-lg text-slate-600">Upazilla Youth Development Officer</div>
+  <div class="font-bold text-lg text-slate-600">Kishoreganj sadar , Kishoreganj , Dhaka , Bangladesh</div>
   <div class="flex mt-4">
     <div><a href="https://www.youtube.com/@abdulkadirhero4672/featured" target="_blank"><img class="w-2/3 hover:ring rounded-full hover:ring-blue-300 hover:ring-4 ease-in-out delay-150 hover:-translate-y-2 hover:scale-110 duration-300" src="https://i.ibb.co/dBLtJbt/youtube.png" alt=""></a></div>
     <div><a href="https://www.facebook.com/profile.php?id=100093351894659&sk=about" target="_blank"><img class="w-2/3 hover:ring rounded-full hover:ring-blue-300 hover:ring-4 ease-in-out delay-150 hover:-translate-y-2 hover:scale-110 duration-300" src="https://i.ibb.co/XV5hpw0/facebook.png" alt=""></a></div>
