--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Abdul Kadir (UYDO) </title>
   <link rel="shortcut icon" href="https://i.ibb.co/Jkzttf2/31563333199.png" type="image/x-icon">
-  <link href="./output.css" rel="stylesheet">
 
   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.5.0/dist/full.min.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
@@ -96,7 +95,7 @@ transition: 0.7s;
  <section class=" pt-32 flex justify-center items-center flex-col">
 
   <div class="avatar">
-    <div class="w-80 border border-gray-300 hover:border-white border-4 hover:ring rounded-full hover:ring-blue-300 hover:ring-4  ease-in-out delay-150 hover:-translate-y-2 hover:scale-110 duration-300">
+    <div class="w-80  border-gray-300 hover:border-white border-4 rounded-full hover:ring-blue-300 hover:ring-4  ease-in-out delay-150 hover:-translate-y-2 hover:scale-110 duration-300">
       <img src="https://i.ibb.co/FKwPnW4/Whats-App-Image-2024-02-13-at-00-22-21-a60dfcc7.jpg" />
     </div>
   </div>
@@ -104,10 +103,10 @@ transition: 0.7s;
   <div class="font-bold text-lg text-slate-600">Upazilla Youth Development Officer</div>
   <div class="font-bold text-lg text-slate-600">Kishoreganj sadar , Kishoreganj , Dhaka , Bangladesh</div>
   <div class="flex mt-4">
-    <div><a href="https://www.youtube.com/@abdulkadirhero4672/featured" target="_blank"><img class="w-2/3 hover:ring rounded-full hover:ring-blue-300 hover:ring-4 ease-in-out delay-150 hover:-translate-y-2 hover:scale-110 duration-300" src="https://i.ibb.co/dBLtJbt/youtube.png" alt=""></a></div>
-    <div><a href="https://www.facebook.com/profile.php?id=100093351894659&sk=about" target="_blank"><img class="w-2/3 hover:ring rounded-full hover:ring-blue-300 hover:ring-4 ease-in-out delay-150 hover:-translate-y-2 hover:scale-110 duration-300" src="https://i.ibb.co/XV5hpw0/facebook.png" alt=""></a></div>
-    <div><a href="#footerSection" ><img class="w-2/3 hover:ring rounded-full hover:ring-blue-300 hover:ring-4 ease-in-out delay-150 hover:-translate-y-2 hover:scale-110 duration-300" src="https://i.ibb.co/C7SFm31/whatsapp.png" alt=""></a></div>
-    <div><a href="#footerSection" ><img class="w-2/3 hover:ring rounded-full hover:ring-blue-300 hover:ring-4 ease-in-out delay-150 hover:-translate-y-2 hover:scale-110 duration-500" src="https://i.ibb.co/FBZJZ5Z/gmail.png" alt=""></a></div>
+    <div><a href="https://www.youtube.com/@abdulkadirhero4672/featured" target="_blank"><img class="w-2/3 rounded-full hover:ring-blue-300 hover:ring-4 ease-in-out delay-150 hover:-translate-y-2 hover:scale-110 duration-300" src="https://i.ibb.co/dBLtJbt/youtube.png" alt=""></a></div>
+    <div><a href="https://www.facebook.com/profile.php?id=100093351894659&sk=about" target="_blank"><img class="w-2/3 rounded-full hover:ring-blue-300 hover:ring-4 ease-in-out delay-150 hover:-translate-y-2 hover:scale-110 duration-300" src="https://i.ibb.co/XV5hpw0/facebook.png" alt=""></a></div>
+    <div><a href="#footerSection" ><img class="w-2/3 rounded-full hover:ring-blue-300 hover:ring-4 ease-in-out delay-150 hover:-translate-y-2 hover:scale-110 duration-300" src="https://i.ibb.co/C7SFm31/whatsapp.png" alt=""></a></div>
+    <div><a href="#footerSection" ><img class="w-2/3 rounded-full hover:ring-blue-300 hover:ring-4 ease-in-out delay-150 hover:-translate-y-2 hover:scale-110 duration-500" src="https://i.ibb.co/FBZJZ5Z/gmail.png" alt=""></a></div>
   </div>
 
  </section>
@@ -116,11 +115,11 @@ transition: 0.7s;
 
 
   
-  <!-- about me section start  -->
+
   <!-- about me section start  -->
   <section class="pt-28   px-5 md:px-20 relative" id="aboutSection">
 
-    <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 md:gap-16">
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-5 md:gap-0">
   <DIV class="col order-2 lg:order-1 flex items-center lg:items-start justify-center flex-col">
     <h1 class="pb-10 font-extrabold text-4xl font-serif text-center">INTRODUCTION   </h1>
     <p class="text-md font-semibold text-amber-900 bannerIntro leading-7" id="para">
@@ -130,13 +129,12 @@ transition: 0.7s;
   </DIV>
   
   <DIV class="col order-1 lg:order-2 flex justify-center items-center">
-  <div class="hover:border-white border-slate-300 border-4 hover:ring hover:ring-blue-300 hover:ring-4  ease-in-out delay-150 hover:-translate-y-2 hover:scale-110 duration-300 w-3/4"><img class="" src="https://i.ibb.co/T0fDdGj/Whats-App-Image-2024-02-16-at-16-05-27-185dc942.png" alt=""></div>
+  <div class="hover:border-white border-slate-300 border-4 hover:ring-blue-300 hover:ring-4  ease-in-out delay-150 hover:-translate-y-2 hover:scale-110 duration-300 "><img class="w-96" src="https://i.ibb.co/w43HhZv/420057194-249165848205143-1651128146020661818-n-1.png" alt=""></div>
   </DIV>
     
   </div>
 
   </section>
-  <!-- about me section end -->
   <!-- about me section end -->
   
   
@@ -148,7 +146,7 @@ transition: 0.7s;
     <h1 class="pb-10 font-extrabold text-4xl font-serif text-center mt-20 mb-8">CAMPAIGNS   </h1>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
 <div class="col ">
-  <div class="card bg-base-100 shadow-xl rounded-none  hover:border-white border-slate-300 border-2 hover:ring hover:ring-blue-300 hover:ring-2  ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300">
+  <div class="card bg-base-100 shadow-xl rounded-none  hover:border-white border-slate-300 border-2 hover:ring-blue-300 hover:ring-2  ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300">
     <figure>  <div class=""><img src="https://i.ibb.co/87cLpgS/27306251658.png" alt=""></div></figure>
     <div class="card-body">
       <h2 class="card-title font-bold">Youth Development Campaign -Certificate Giving</h2>
@@ -161,11 +159,11 @@ transition: 0.7s;
   </div>
 </div>
 <div class="col">
-  <div class="card bg-base-100 shadow-xl rounded-none  hover:border-white border-slate-300 border-2 hover:ring hover:ring-blue-300 hover:ring-2  ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300">
+  <div class="card bg-base-100 shadow-xl rounded-none  hover:border-white border-slate-300 border-2 hover:ring-blue-300 hover:ring-2  ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300">
     <figure>  <div class=""><img src="https://i.ibb.co/G9nvQF0/45043894544.png" alt=""></div></figure>
     <div class="card-body">
       <h2 class="card-title font-bold">Poverty Emancipation Campaign</h2>
-      <p class="font-semibold" id="para">I am resolute in my mission to inspire, guide, and propel the youth toward meaningful success...</p>
+      <p class="font-semibold mb-12" id="para">I am resolute in my mission to inspire, guide, and propel the youth toward meaningful success...</p>
         <div class="flex  justify-center items-center gap-5 mt-5">
           <button class="bg-[#6bbcfa] hover:bg-[#45abf9] text-lg font-bold btn border-0 px-10 hover:ring hover:ring-gray-300 ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300 btnDesign"><a href="./index - projects.html" target="_blank">details </a></button>
           <button class="bg-[#6bbcfa] hover:bg-[#45abf9] text-lg font-bold btn border-0 px-10 hover:ring hover:ring-gray-300 ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300 btnDesign"><a href="#footerSection">Contact </a></button>
@@ -174,11 +172,11 @@ transition: 0.7s;
   </div>
 </div>
 <div class="col">
-  <div class="card bg-base-100 shadow-xl rounded-none  hover:border-white border-slate-300 border-2 hover:ring hover:ring-blue-300 hover:ring-2  ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300">
+  <div class="card bg-base-100 shadow-xl rounded-none  hover:border-white border-slate-300 border-2 hover:ring-blue-300 hover:ring-2  ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300">
     <figure>  <div class=""><img src="https://i.ibb.co/mNWYB1g/img.jpg" alt=""></div></figure>
     <div class="card-body">
       <h2 class="card-title font-bold">Her Power Project - Women Empowerment</h2>
-      <p class="font-semibold" id="para">The Her Power Project is a significant initiative aligned with the visionary ‘Digital Bangladesh...</p>
+      <p class="font-semibold mb-6" id="para">The Her Power Project is a significant initiative aligned with the visionary ‘Digital Bangladesh...</p>
         <div class="flex  justify-center items-center gap-5 mt-5">
           <button class="bg-[#6bbcfa] hover:bg-[#45abf9] text-lg font-bold btn border-0 px-10 hover:ring hover:ring-gray-300 ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300 btnDesign"><a href="./index - projects.html" target="_blank">details </a></button>
           <button class="bg-[#6bbcfa] hover:bg-[#45abf9] text-lg font-bold btn border-0 px-10 hover:ring hover:ring-gray-300 ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300 btnDesign"><a href="#footerSection">Contact </a></button>
